# blog

./: .gitignore  README.md  astro.config.mjs  bun.lockb  config.toml  conrad.key  deploy.sh  makefile  node-turn.js  package-lock.json  package.json  revert.sh  shell.nix  src-hash.json  tailwind.config.cjs  tsconfig.json
.obsidian/: app.json  appearance.json  community-plugins.json  workspace.json
.obsidian/snippets/: embed.css
cms-server/: pyproject.toml
cms-server/cms-server/: cms-server.py
content/: about.md  links.md  list.md
content/demos/: discontinuity.js  index.html  localCooldown.js
content/posts/: accuracy-x-time.md  cluster.md  engine.md  js-test.md  jupyter-test.md  learning-clojure.md  lull.md  more-shells.md  motivation.md  nixing-racket-with-jupyter.md  on-blogging copy.md  on-blogging.md  project-plans.md  seashells.md  time.md  whattomorrowholds.md
docs/: 404.html  CNAME  index.html  index.xml  sitemap.xml
docs/about/: index.html
docs/categories/: index.html  index.xml
docs/demos/: discontinuity.js  funCallGraph.js  globalCooldown.js
docs/links/: index.html
notebooks/: JupyterTest.ipynb  JupyterTest.md  ObjectDistance.ipynb  RaspberryPiZeroWwithUSBPlugUbuntuSetup.ipynb  Untitled.ipynb  rmlines.ipynb
notebooks/remarkable/: Untitled.ipynb  pyproject.toml
public/: Screencast_from_2023-09-10 11-10-49.webm  commit.json  manifest.json  service-worker-old.js  service-worker.js  src-hash.json  update.json
pwa-util/: readme.md
resume/: .gitignore  Makefile  make.py  pyproject.toml  resume-experience.md  resume.tex  shell.nix
(+144 files in other folders)
